refactoring main.go. Add bootstrap and router file
